change the github

--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
+<!DOCTYPE HTML>
 <html>
-<head>
-</head>
-<body>
-nihao
-</body>
+	<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+	<title>The War Is Coming</title>
+	<style type="text/css">
+		h1{color:purple;font-family:NSimSun;font-size:bold;}
+		h2{color:#5A5AAD;}
+		.unsortlist{
+			text-align="center";
+			text-decoration:underline;
+		}
+		.gameintro{
+			font-size="2";font-color:black;}
+	</style>
+	</head>
+	<body>
+		<div align="center"><h1>Superior Tower Defence</h1></div>
+	<h2><ul class="unsortlist">
+	<li>游戏简介</li>
+
+	<p><font color=black>介绍内容</font></p>
+	<br/>
+	<li>游戏元素
+		<ul class="unsortlist" >
+			<li>防御塔</li>
+			<li>敌人</li>
+			<li>必杀技</li>
+			</ul></li>
+	<br/>
+	<li>玩法介绍</li>
+	<br/>
+	</ul></h2>
+	</body>
 </html>
