--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				after the tenth round.
 			</h3>
 		</div>
-		<div><img src="images\6.png"></div>
+		<div><img src="images\part.png"></div>
 		<div class="text">
 		<br/>
 			<center><h2>As</h2></center>
