--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<!-- 大图 -->
 		<div>
-			<img src="images\mauve.png" width = 100% height= 700>
+			<center><img src="images\mauve.png" width = 66.7% height= 700></center>
 		</div>
 	<div id="introduce"></div>
 	<div class="INTRO">
