--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			<h2>DOWNLOAD</h2>
 		</div>
 		<center><hr id="downHr"></center>
-		<div class="linktext"><a href="Superior%20Tower%20Defence.rar">Click To DownLoad</a></div>
+		<div class="linktext"><a href="https://github.com/Hukeqing/Superior-Tower-Defence/releases/download/V1.0.0/Superior.Tower.Defence.rar">Click To DownLoad</a></div>
 	</div>
     <div class="footer">
         <p class="centers">
