--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			    but,the heavy news is that a evil organization is strong attracted by the tower.So they initiate an invasion and your mission is to prevent their aggression.
 			</h3>
 		</div>
-		<div><img src="images\2.png"></div>
+		<div><img src="images\new1.png"></div>
 		<div class="text">
 		<br/>
 			<center><h2>The war Starts,</h2></center>
