Change the down load link

--- a/index.html
+++ b/index.html
@@ -1,64 +1,69 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="css.css">
-		<title>The War Is Coming</title>	
-	</head>
-	<body>
-		<!-- 顶部索引 -->
-		<div class="top">
-			<!-- logo -->
-			<!-- <div class="logo"> -->
-			<!-- <img src="images\logo.png"> -->
-			<!-- </div> -->
-			<!-- <div white-space:nowrap> -->
-			<!-- S	 -->
-			<!-- </div> -->
-			<!-- 导航 -->
-			<div style="color:purple;font-size:33px;position:absolute;text-shadow:0 0 2px black">
-				Superior Tower Defence
-			</div>
-			<div class="fir-nav" white-space:nowrap>
-				<ul class="fir-ul">
-					<li class="bgcolor"><a href="#">HOME</a></li>
-					<li class="bgcolor"><a href="#introduce">INTRO</a></li>
-					<li class="bgcolor"><a href="#element">ELEM</a></li>
-					<li class="bgcolor"><a href="#playgame">PLAY</a></li>
-					<li class="bgcolor"><a href="#downloadgame">DOWNLOAD</a></li>
-					<!-- <li class="bgcolor" 	><a href="#">ABOUT</a></li> -->
-				</ul>
+
+<head>
+	<link rel="stylesheet" type="text/css" href="css.css">'
+	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+	<title>The War Is Coming</title>
+</head>
+
+<body>
+	<!-- 顶部索引 -->
+	<div class="top">
+		<!-- logo -->
+		<!-- <div class="logo"> -->
+		<!-- <img src="images\logo.png"> -->
+		<!-- </div> -->
+		<!-- <div white-space:nowrap> -->
+		<!-- S	 -->
+		<!-- </div> -->
+		<!-- 导航 -->
+		<div style="color:purple;font-size:33px;position:absolute;text-shadow:0 0 2px black">
+			Superior Tower Defence
 		</div>
+		<div class="fir-nav" white-space:nowrap>
+			<ul class="fir-ul">
+				<li class="bgcolor"><a href="#">HOME</a></li>
+				<li class="bgcolor"><a href="#introduce">INTRO</a></li>
+				<li class="bgcolor"><a href="#element">ELEM</a></li>
+				<li class="bgcolor"><a href="#playgame">PLAY</a></li>
+				<li class="bgcolor"><a href="#downloadgame">DOWNLOAD</a></li>
+				<!-- <li class="bgcolor" 	><a href="#">ABOUT</a></li> -->
+			</ul>
 		</div>
-		<!-- 大图 -->
-		<div>
-			<center><img src="images\mauve.png" width = 66.7% height= 700></center>
-		</div>
+	</div>
+	<!-- 大图 -->
+	<div>
+		<center><img src="images\mauve.png" width=66.7% height=700></center>
+	</div>
 	<div id="introduce"></div>
 	<div class="INTRO">
 		<div class="introBg">
 			<img src="images\intro.png">
-		<!-- INTRODUCE -->
-		<!-- 图片上方 -->
-		<div id="introHead">
-			<h2>INTRO</h2>
-			<!-- 绿色短分割线 -->
-			<center><hr id="introHr"></center>
-			<p>
-				you are very lucky to have a pure crystal tower,
-			    but,the heavy news is that a evil organization is strong attracted by the tower.<br />
-				....................................................<br />
-				.....................................................<br />
-			</p>
-		</div>
-		<div id="introLeft">
-			<div id="introLeftTop">
+			<!-- INTRODUCE -->
+			<!-- 图片上方 -->
+			<div id="introHead">
+				<h2>INTRO</h2>
+				<!-- 绿色短分割线 -->
+				<center>
+					<hr id="introHr">
+				</center>
 				<p>
-					A WORD<br>
-					ABOUT US
+					you are very lucky to have a pure crystal tower,
+					but,the heavy news is that a evil organization is strong attracted by the tower.<br />
+					....................................................<br />
+					.....................................................<br />
 				</p>
 			</div>
-		</div>
-		<div id="introLeftLayer"></div>
+			<div id="introLeft">
+				<div id="introLeftTop">
+					<p>
+						A WORD<br>
+						ABOUT US
+					</p>
+				</div>
+			</div>
+			<div id="introLeftLayer"></div>
 			<div class="introLeftLayertext">
 				<p>
 					gameintro.........................<br>
@@ -68,70 +73,85 @@
 					end
 				</p>
 			</div>
-		<div class="introRightOne">
-			<p>Game</p>
-			<center><hr></center>
-			<p>C#</p>
-		</div>
-		<div class="introRightTwo">
-			<p>Web</p>
-			<center><hr></center>
-			<p>Html/css</p>
-		</div>
+			<div class="introRightOne">
+				<p>Game</p>
+				<center>
+					<hr>
+				</center>
+				<p>C#</p>
+			</div>
+			<div class="introRightTwo">
+				<p>Web</p>
+				<center>
+					<hr>
+				</center>
+				<p>Html/css</p>
+			</div>
 		</div>
 	</div>
 	<!-- ELEM模块 -->
 	<div id="element"></div>
 	<div class="ELEM">
-			<div id="elemHead">
+		<div id="elemHead">
 			<h2>ELEM</h2>
-			</div>
-			<center><hr id="elemHr"></center>
-			<div class="pct1">
-				<img src="images\tower.png">
+		</div>
+		<center>
+			<hr id="elemHr">
+		</center>
+		<div class="pct1">
+			<img src="images\tower.png">
 			<div class="top1">
 				<p>Tower</p>
 			</div>
-			</div>
-			<div class="pct2">
-				<img src="images\enemy.png">
+		</div>
+		<div class="pct2">
+			<img src="images\enemy.png">
 			<div class="top2">
 				<p>Enemy</p>
 			</div>
-			</div>
-			<div class="pct3">
-				<img src="images\special.png">
+		</div>
+		<div class="pct3">
+			<img src="images\special.png">
 			<div class="top3">
 				<p>Clutch Shot</p>
 			</div>
-			</div>
+		</div>
 	</div>
 	<div id="playgame"></div>
 	<div id="eight">
-	<div id="elemHead">
-		<h2>PLAY</h2>
-	</div>
-	<center><hr id="eightHr"></center>
+		<div id="elemHead">
+			<h2>PLAY</h2>
+		</div>
+		<center>
+			<hr id="eightHr">
+		</center>
 		<div><img src="images\1.png"></div>
 		<div class="text">
-		<br/>
-			<center><h2>Firstly,</h2></center>
+			<br />
+			<center>
+				<h2>Firstly,</h2>
+			</center>
 			<h3>&nbsp;&nbsp; look at the pure crystal tower,it is lucky for you to have it.
-			    but,the heavy news is that a evil organization is strong attracted by the tower.So they initiate an invasion and your mission is to prevent their aggression.
+				but,the heavy news is that a evil organization is strong attracted by the tower.So they initiate an
+				invasion and your mission is to prevent their aggression.
 			</h3>
 		</div>
 		<div><img src="images\2.png"></div>
 		<div class="text">
-		<br/>
-			<center><h2>The war Starts,</h2></center>
+			<br />
+			<center>
+				<h2>The war Starts,</h2>
+			</center>
 			<h3>&nbsp;&nbsp;and the organization will release a group of different enemies to offend ,
-			but you also can build some unique-skill towers to fight against them.
+				but you also can build some unique-skill towers to fight against them.
 			</h3>
 		</div>
 		<div><img src="images\3.png"></div>
 		<div class="text">
-		<br/>
-			<center><h2>Attention,</h2></center>
+			<br />
+			<center>
+				<h2>Attention,</h2>
+			</center>
 			<h3>&nbsp;&nbsp;the enemies have a special talent to change the time and space ,
 				that means they can go out of a black hole anywhere(even around the crystal tower)
 				after the tenth round.
@@ -139,26 +159,49 @@
 		</div>
 		<div><img src="images\part.png"></div>
 		<div class="text">
-		<br/>
-			<center><h2>As</h2></center>
-			<h3>&nbsp;&nbsp;the game goes on,the number of enemies will increase conspicuously and the resourses will become more and more lacking.
+			<br />
+			<center>
+				<h2>As</h2>
+			</center>
+			<h3>&nbsp;&nbsp;the game goes on,the number of enemies will increase conspicuously and the resourses will
+				become more and more lacking.
 				May be the last part of the game is extremely hard for you.Good luck!
 			</h3>
 		</div>
 	</div>
 	<div id="downloadgame"></div>
 	<div id="download">
+		<script>
+			$.ajax({
+				url: 'https://api.github.com/repos/Hukeqing/Superior-Tower-Defence/releases/latest',
+				type: 'get',
+				success: function (response) {
+					downloadurl = "https://github.com/Hukeqing/Superior-Tower-Defence/releases/download/" + response.tag_name + "/Superior.Tower.Defence.rar";
+					document.getElementById("downloadlinked").innerHTML = "Click To Download"
+					document.getElementById("downloadlinked").href = downloadurl;
+				}
+			});
+			function downloadstart() {
+				document.getElementById("downloadlinked").innerHTML = "Download will start soon";
+			}
+		</script>
 		<div id="downHead">
 			<h2>DOWNLOAD</h2>
 		</div>
-		<center><hr id="downHr"></center>
-		<div class="linktext"><a href="https://github.com/Hukeqing/Superior-Tower-Defence/releases/download/V1.0.0/Superior.Tower.Defence.rar">Click To DownLoad</a></div>
+		<center>
+			<hr id="downHr">
+		</center>
+		<div class="linktext">
+			<a href="#downloadgame" id="downloadlinked" onclick="downloadstart()">
+				Checking the latest version, please wait...
+			</a>
+		</div>
 	</div>
-    <div class="footer">
-        <p class="centers">
-            Copyright &copy; 2019.Fragrant All rights reserved.
-        </p>
-    </div>
-	</body>	
-	
-</html>	
+	<div class="footer">
+		<p class="centers">
+			Copyright &copy; 2019.Fragrant All rights reserved.
+		</p>
+	</div>
+</body>
+
+</html>
