--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
 	<!-- 大图 -->
 	<div>
-		<center><img src="images\mauve.png" width=66.7% height=700></center>
+		<center><img src="http://i2.bvimg.com/689714/47c3343e28b830a5.png" width=66.7% height=700></center>
 	</div>
 	<div id="introduce"></div>
 	<div class="INTRO">
@@ -99,19 +99,19 @@
 			<hr id="elemHr">
 		</center>
 		<div class="pct1">
-			<img src="images\tower.png">
+			<img src="http://i2.bvimg.com/689714/47c3343e28b830a5.png">
 			<div class="top1">
 				<p>Tower</p>
 			</div>
 		</div>
 		<div class="pct2">
-			<img src="images\enemy.png">
+			<img src="http://i2.bvimg.com/689714/f63fe593c1638bb9.png">
 			<div class="top2">
 				<p>Enemy</p>
 			</div>
 		</div>
 		<div class="pct3">
-			<img src="images\special.png">
+			<img src="http://i2.bvimg.com/689714/ac11e5c6b91bdc47.png">
 			<div class="top3">
 				<p>Clutch Shot</p>
 			</div>
@@ -125,7 +125,7 @@
 		<center>
 			<hr id="eightHr">
 		</center>
-		<div><img src="images\1.png"></div>
+		<div><img src="http://i2.bvimg.com/689714/fc2cf81066bde1dc.png"></div>
 		<div class="text">
 			<br />
 			<center>
@@ -136,7 +136,7 @@
 				invasion and your mission is to prevent their aggression.
 			</h3>
 		</div>
-		<div><img src="images\new1.png"></div>
+		<div><img src="http://i2.bvimg.com/689714/1e4de1ca3baa54d7.png"></div>
 		<div class="text">
 			<br />
 			<center>
@@ -146,7 +146,7 @@
 				but you also can build some unique-skill towers to fight against them.
 			</h3>
 		</div>
-		<div><img src="images\3.png"></div>
+		<div><img src="http://i2.bvimg.com/689714/25d051493ba2bc58.png"></div>
 		<div class="text">
 			<br />
 			<center>
@@ -157,7 +157,7 @@
 				after the tenth round.
 			</h3>
 		</div>
-		<div><img src="images\part.png"></div>
+		<div><img src="http://i2.bvimg.com/689714/fbdc27827acd1d59.png"></div>
 		<div class="text">
 			<br />
 			<center>
