--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 					<hr id="introHr">
 				</center>
 				<p>
-					you are very lucky to have a pure crystal tower,
-					but,the heavy news is that a evil organization is strong attracted by the tower.<br />
+					<h3>Battle or game?<br/>
+					Revolt or compromise?<br/>
+					When disaster strikes,what will you do?</h3><br/>
 					....................................................<br />
 					.....................................................<br />
 				</p>
@@ -58,19 +59,18 @@
 			<div id="introLeft">
 				<div id="introLeftTop">
 					<p>
-						A WORD<br>
-						ABOUT US
+						&nbsp;An &nbsp;Independent<br>
+						Development &nbsp;&nbsp;Team
 					</p>
 				</div>
 			</div>
 			<div id="introLeftLayer"></div>
 			<div class="introLeftLayertext">
 				<p>
-					gameintro.........................<br>
-					mainbody...........................<br>
-					....................................<br>
-					....................................<br>
-					end
+					Designed By<br>
+					&nbsp;&nbsp;&nbsp;<a href="https://hukeqing.github.io/Keqing.hu.com/">Mauve</a><br>
+					&nbsp;&nbsp;&nbsp;Fragrant<br>
+					<br>
 				</p>
 			</div>
 			<div class="introRightOne">
