--- a/index.html
+++ b/index.html
@@ -59,17 +59,18 @@
 			<div id="introLeft">
 				<div id="introLeftTop">
 					<p>
-						&nbsp;An &nbsp;Independent<br>
-						Development &nbsp;&nbsp;Team
+						&nbsp;Designed By<br/>&nbsp;&nbsp;&nbsp;<a href="https://hukeqing.github.io/Keqing.hu.com/">Mauve</a>&nbsp;
+						&nbsp;&nbsp;Fragrant &nbsp;&nbsp;</br>
 					</p>
 				</div>
 			</div>
 			<div id="introLeftLayer"></div>
 			<div class="introLeftLayertext">
 				<p>
-					Designed By<br>
-					&nbsp;&nbsp;&nbsp;<a href="https://hukeqing.github.io/Keqing.hu.com/">Mauve</a><br>
-					&nbsp;&nbsp;&nbsp;Fragrant<br>
+					<br/>&nbsp;&nbsp;&nbsp;Thanks<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;For
+					&nbsp;&nbsp;&nbsp;
+					 <br/>&nbsp;&nbsp;热络、齐喑
 					<br>
 				</p>
 			</div>
