--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div id="introduce"></div>
 	<div class="INTRO">
 		<div class="introBg">
-			<img src="http://m.qpic.cn/psb?/V12gDDWR2e9lnM/PYjUgQEq565vSled*fiCf2pSMo9rmLCR3xjnkMePHiI!/b/dLYAAAAAAAAA">
+			<img src="http://m.qpic.cn/psb?/V12gDDWR2e9lnM/YUpx.U4E.KxtGgJcXnLZsoseYjvJ*0Z77MJCqOBzhgU!/b/dL8AAAAAAAAA">
 			<!-- INTRODUCE -->
 			<!-- 图片上方 -->
 			<div id="introHead">
